fwr: fixes small layout issues and bugs.
git-svn-id: svn+ssh://kelev.kaltura.com/usr/local/kalsource/apps/clipapp/trunk@67880 6b8eccd3-e8c5-4e7d-8186-e12b5326b719

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ input, textarea { font-family: Arial; }
 #kdp3 { float: left; margin-left: 20px; width: 500px; height: 280px; }
 #clipper { margin: 30px 0 10px 20px; float: none; width: 910px; height: 100px; }
 #form { float: left; width: 385px; margin-left: 25px; }
-#newclip { position: relative; text-align: left; padding: 0 0 15px; border-bottom: 1px solid #d8d8d8; }
+#newclip { position: relative; text-align: left; padding: 0 0 15px; border-bottom: 1px solid #d8d8d8; font-weight: bold; }
 #newclip a { background: url(../images/newclip.png); display: block; font-size: 12px; text-decoration: none; width: 111px; height: 16px; padding: 8px 0; color: #fff; font-weight: bold; text-align: center; }
 
 #fields { position: relative; padding-top: 30px; }
